@@ -44,7 +44,7 @@ bool output_change = false;
 static volatile bool signal_exit_flag = false;
 static volatile bool signal_restart_flag = false;
 const char* version = "0.9";
-const int revision = 126;
+const int revision = 127;
 static int port = 3483;
 static int firmware = 1;
 static int player_type = 8;
